# flask-example

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
app/: __init__.py  models.py  views.py
app/templates/: index.html
config/: gunicorn_settings.py
migrations/versions/: b6ab2d5eff6c_initial_migration.py
tests/: conftest.py  test_hello.py
