[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      migrations
  )
)
'''

[tool.isort]
skip = 'migrations'

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "3.10.10"
Flask = ">=2.3.2"
Flask-SQLAlchemy = ">=3.0.3"
mysqlclient = "^2.1.1"
Flask-Migrate = "^4.0.4"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
